--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .App {
   text-align: center;
 }
+.message-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
 .App-logo {
   height: 40vmin;
